# aqua-rural

./: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260314_0001_initial_schema.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: health.py
app/core/: config.py
app/db/: models.py  session.py
app/models/: __init__.py  audit.py  billing.py  consumer_unit.py  customer.py  location.py  meter.py  mixins.py  tariff.py  user.py
app/repositories/: __init__.py  base.py  consumer_unit.py  meter_reading.py
app/schemas/: __init__.py  base.py  billing.py  consumer_unit.py  customer.py  location.py  meter.py  tariff.py  user.py
app/services/: consumer_unit.py  meter_reading.py
tests/: test_app.py  test_config.py  test_health.py  test_models_metadata.py
